@@ -13,11 +13,12 @@ Global.JetCollectionKey: AntiKt4LCTopoJets
 # ---------------------------  Run configuration ----------------------
 cafe.Run:  JobBookeeping cafe::IfPr(datamc) BuildSUSYObjects(susyobjs) 
 +cafe.Run: ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt)
++cafe.Run: ZeroLeptonCRZ(crz)
 +cafe.Run: BuildSUSYObjects(susyobjsy) ZeroLeptonCRY(cry)
 
 cafe.Input: root://eosatlas.cern.ch//eos/atlas/user/j/jpoveda/r5625_test/AOD.01507244._011801.pool.root.1
 cafe.Output: my.root
-#cafe.xAODOutput: xAOD.root
+cafe.xAODOutput: xAOD.root
 cafe.Containers: AntiKt4LCTopoJets Muons ElectronCollection PhotonCollection TauRecContainer MET_RefFinal PrimaryVertices EventInfo TruthEvent TruthVertex TruthParticle AntiKt4TruthJets MET_Truth 
 cafe.Progress: 1000
 cafe.Events: 10
@@ -68,6 +69,13 @@ vrwt.cutfile: %{Global.cutfile}
 vrwt.IsVR: TRUE
 vrwt.IsSignal: %{Global.IsSignal}
 vrwt.Period: %{Global.Period}
+
+# ---------------------------  CRZ Region -----------------
+crz.IsData: %{Global.IsData}
+crz.cutfile: %{Global.cutfile}
+crz.IsSignal: %{Global.IsSignal}
+crz.Period: %{Global.Period}
+
 
 
 # ---------------------------  Build physics objects -----------------
