@@ -1,4 +1,4 @@
-#--------------------------------------------------------------------------
+config/zerolepton.config#--------------------------------------------------------------------------
 # In order to work for local and release packages and/or for local and grid
 # one should only point to files via the ${ROOTCOREBIN}/data/<package>
 # 
@@ -44,7 +44,7 @@ grl.GRLFile: ${ROOTCOREBIN}/data/SUSYTools/GRL/Summer2013/data12_8TeV.periodAllY
 
 
 # ---------------------------  systematics looper -----------------
-systloop.Run: BuildSUSYObjects(susyobjs) ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt) BuildSUSYObjects(susyobjsy) ZeroLeptonCRY(cry)
+systloop.Run: BuildSUSYObjects(susyobjs) ZeroLeptonSR(sr) ZeroLeptonCRWT(crwt) ZeroLeptonCRWT(vrwt) ZeroLeptonCRZ(crz) BuildSUSYObjects(susyobjsy) ZeroLeptonCRY(cry)
 #systloop.SystPrefix: JET_EffectiveNP_1
 
 # ---------------------------  Build physics objects -----------------
@@ -76,6 +76,12 @@ vrwt.IsSignal: %{Global.IsSignal}
 vrwt.UseSystematics: TRUE
 vrwt.Period: %{Global.Period}
 
+# ---------------------------  CRZ Region -----------------
+crz.IsData: %{Global.IsData}
+crz.cutfile: %{Global.cutfile}
+crz.IsSignal: %{Global.IsSignal}
+crz.UseSystematics: TRUE
+crz.Period: %{Global.Period}
 
 # ---------------------------  Build physics objects -----------------
 susyobjsy.IsData: %{Global.IsData}
